# tftp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build  rustfmt.toml  stat  test
.cargo/: config
.github/workflows/: linux.yml  macos.yml  windows.yml
benches/: benchmarks.rs
binary/: Cargo.toml
binary/src/: blocking_reader.rs  cli.rs  encryption_io.rs  io.rs  macros.rs  main.rs  receiver.rs  sender.rs  socket.rs  sync.rs
builder/: Dockerfile  autocomplete.sh
builder/completions/: _tftp  _tftp.ps1  tftp.bash  tftp.elv  tftp.fish
builder/debian/: postinst  service
info/: README.md  full_encryption_capture.pcap  receive_capture_delayed_encryption.pcap  receive_capture_no_encryption_stack.pcap  send_capture_delayed_encryption.pcap  send_capture_no_encryption_stack.pcap
src/: block_mapper.rs  buffer.rs  config.rs  encrypted_packet.rs  encryption.rs  error.rs  flow_control.rs  key_management.rs  lib.rs  macros.rs  map.rs  packet.rs  socket.rs  std_compat.rs  storage.rs
src/client/: client.rs  config.rs  connection.rs  encryption_socket.rs  encryption_socket_builder.rs  extensions.rs  mod.rs  receiver.rs  sender.rs
src/readers/: block_reader.rs  encrypted_stream_reader.rs  mod.rs  multiple_block_reader.rs  multiple_block_seek_reader.rs  pool_reader.rs  single_block_reader.rs
src/server/: config.rs  connection.rs  connection_builder.rs  extensions.rs  mod.rs  multi_thread.rs  readers_available.rs  server.rs  single_thread.rs  validation.rs  wait_control.rs
src/server/helpers/: connection.rs  mod.rs  read.rs  write.rs
src/writers/: block_writer.rs  encrypted_stream_writer.rs  mod.rs  single_block_writer.rs
std-binary/: Cargo.toml  build.rs.autocomplete
std-binary/src/: blocking_reader.rs  cli.rs  config.rs  encryption_io.rs  error.rs  io.rs  main.rs  receiver.rs  sender.rs  socket.rs  std_compat.rs  sync.rs
