[package]
name = "tftp-dus"
version = "0.7.1"
edition = "2021"

[profile.release]
strip = true

[workspace]
members = ["std-binary"]

[dependencies]
log = "0.4"
heapless = { version = "0.8", optional = false, default-features = false }
base64 = { version = "0.21", optional = true, default-features = false }
x25519-dalek = { version = "2", optional = true, default-features = false, features = [
    "getrandom",
    "zeroize",
    "static_secrets",
] }
ed25519-dalek = { version = "2", optional = true }
chacha20poly1305 = { version = "0.10", optional = true, default-features = false, features = [
    "heapless",
    "getrandom",
    "stream",
] }
rand = { version = "0.8", optional = false, default-features = false, features = [
    "getrandom",
] }
micromath = { version = "2", optional = false }

# remove once chacha20poly1305, aead supports heapless 0.8
heapless_07 = { package = "heapless", version = "0.7", optional = false, default-features = false }
metrics = { version = "0.24", optional = true }

[dev-dependencies]
rand = "0.8"
vfs = "0.9"
arrayvec = { version = "0.7", optional = false, default-features = false }

[features]
default = ["alloc", "encryption", "multi_thread", "seek", "metrics"]
std = []
alloc = [
    "chacha20poly1305?/alloc",
    "x25519-dalek?/alloc",
    "ed25519-dalek?/alloc",
]
encryption = ["x25519-dalek", "chacha20poly1305", "base64", "ed25519-dalek"]
seek = []
multi_thread = ["std"]
