[package]
name = "tftp-std-binary"
version = "0.6.0"
edition = "2021"

authors = ["Tomas Jakstas <tom.jakstas@gmail.com>"]
description = "tftp server and client"
homepage = "https://github.com/songokas/tftp"
repository = "https://github.com/songokas/tftp"
license = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# std compile time requirement
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tftp-dus = { path = "..", default-features = false }
rand = { version = "0.8", optional = false, default-features = false, features = [
    "getrandom",
] }
# alloc requirement for events
polling = "3"
socket2 = { version = "0.5", features = ["all"] }
notify = { version = "6", optional = true }
otlp-metrics-exporter = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["alloc", "encryption", "multi_thread", "seek", "sync", "metrics"]
# no std is still using std dependency for filesystem, sockets, std::io
std = ["tftp-dus/std"]
alloc = ["tftp-dus/alloc"]
encryption = ["tftp-dus/encryption"]
seek = ["tftp-dus/seek"]
metrics = ["tftp-dus/metrics", "otlp-metrics-exporter"]
multi_thread = ["tftp-dus/multi_thread", "std"]
sync = ["notify", "std", "alloc"]

[[bin]]
name = "tftp-dus"
path = "src/main.rs"

[build-dependencies]
cargo-deb = "1"
# uncomment for autocomplete generation and remove build.rs.autocomplete
# clap = { version = "4", features = ["derive"] }
# clap_complete = "4"
# tftp-dus = { path = "..", default-features = false }

[package.metadata.deb]
name = "tftp-dus"
maintainer = "Tomas Jakstas <tom.jakstas@gmail.com>"
copyright = "2023, Tomas Jakstas <tom.jakstas@gmail.com>"
extended-description = """\
Simple tftp-dus client and server with optional encryption\
"""
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "../builder/debian"
revision = ""
assets = [
    [
        "target/release/tftp-dus",
        "usr/bin/",
        "755",
    ],
    [
        "../README.md",
        "usr/share/doc/tftp-dus/README",
        "644",
    ],
    [
        "../builder/debian/service",
        "lib/systemd/system/tftp-dus.service",
        "644",
    ],
]
